@@ -552,8 +552,28 @@ RaceGnome	Male	Bingles
 RaceGnome	Male	Aldon
 RaceGnome	Male	Haga
 RaceGnome	Male	Garder
+RaceGnome	Male	Dinky
+RaceGnome	Male	Hersalli
+RaceGnome	Male	Schnizaschi
+RaceGnome	Male	Drucnur
+RaceGnome	Male	Fenthwick
 RaceGnome	Female	Wayrick
 RaceGnome	Female	Koemi
 RaceGnome	Female	Demi
 RaceGnome	Female	Zhenya
 RaceGnome	Female	Misha
+RaceGnome	Female	Belita
+RaceGnome	Female	Rosine
+RaceGnome	Female	Aiko
+RaceGnome	Female	Orgyra
+RaceGnome	Female	Faeza
+RaceGnome	Sur	Tikklekins
+RaceGnome	Sur	Waywocket
+RaceGnome	Sur	Swiftgur
+RaceGnome	Sur	Fizzwarper
+RaceGnome	Sur	Seamsmasher
+RaceGnome	Sur	Dimbuckle
+RaceGnome	Sur	Millcleanser
+RaceGnome	Sur	Waggletop
+RaceGnome	Sur	Jepplaedriad
+RaceGnome	Sur	Nickleplenty
